# vision_lan_nav

./: README.md  package.xml  setup.py  spatial_data.json
checkpoints/: clip_finetuned.pt  meta.json
config/: nav2_params.yaml  slam_params.yaml
dataset/: vln_train.jsonl
launch/: vln_bringup.launch.py
vln_project/: clip_finetune.py  frontier_explorer_node.py  object_detector_node.py  vln_command_node.py
